# interview

./: .env  CLAUDE.md  check_import.py  financial_data_collector.py  pyproject.toml  requirements.txt  todo_list.html
.cursor/: mcp.json
template/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  zensical.toml
template/.github/workflows/: publish.yml
template/docs/: installation.md  plan
template/src/template/: __main__.py
template/src/template/bll/: milvus_manager.py
template/src/template/llm/: client.py  model_factory.py  prompt.py  prompt_template.py
template/src/template/mcp/: mcp_milvus_manager.py  mcp_mysql_manager.py  mcp_redis_manager.py
template/src/template/proxy/: claude_proxy.py
template/src/template/rag/: history.py  loader.py  milvus_practice.py  retriever.py
template/src/template/service/: qa_service.py
template/src/template/ui/: api.py  index.html
template/src/template/util/: logger.py  theard_pool.py  vector_util.py
template/tests/: test_logger.py  test_milvus.py  test_python_boilerplate.py  test_stock_analysis.py
