[project]
name = "aiagent"
version = "0.1.0"
description = ""
authors = [
    {name = "xzq",email = "xun_6666@163.COM"}
]
readme = "README.md"
requires-python = ">=3.9"
packages = [{include = "template", from = "."}]
dependencies = [
    "anyio (==4.12.1)",
    "backports-tarfile (==1.2.0)",
    "build (==1.4.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2026.2.25)",
    "charset-normalizer (==3.4.5)",
    "colorama (==0.4.6)",
    "distlib (==0.4.0)",
    "dulwich (==0.24.10)",
    "exceptiongroup (==1.3.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "findpython (==0.7.1)",
    "grpcio (==1.75.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "importlib-metadata (==8.7.1)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.1.1)",
    "jaraco-functools (==4.4.0)",
    "keyring (==25.7.0)",
    "more-itertools (==10.8.0)",
    "msgpack (==1.1.2)",
    "numpy (==2.0.2)",
    "packaging (==26.0)",
    "pandas (==2.3.3)",
    "pbs-installer (==2025.12.17)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.4.0)",
    "protobuf (==6.32.1)",
    "pymilvus (==2.6.2)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-discovery (==1.1.1)",
    "python-dotenv (==1.1.1)",
    "pytz (==2025.2)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "tomli (==2.4.0)",
    "tomlkit (==0.14.0)",
    "trove-classifiers (==2026.1.14.14)",
    "tzdata (==2025.2)",
    "ujson (==5.11.0)",
    "urllib3 (==2.6.3)",
    "websocket-client (==1.9.0)",
    "zipp (==3.23.0)",
    "zstandard (==0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
